# test_task_chat

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  wsgi-entrypoint.sh
core/: asgi.py  settings.py  urls.py
mainapp/: views.py
